--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -195,7 +195,8 @@ class ItemCollection extends Polymer.GestureEventListeners(Recipes.Element) {
         return val;
     }
     compute_page_number(skip) { return skip + 1; }
-    attached() {
+    connectedCallback() {
+        super.connectedCallback();
         // Recipes have their delete mechanish outside the context
         // of this element. In order to refresh this list when they
         // are deleted, they send this signal.
@@ -206,7 +207,8 @@ class ItemCollection extends Polymer.GestureEventListeners(Recipes.Element) {
         this.addEventListener("item-deleted", this._listener2);
     }
     // Remove listeners to avoid memory leaks.
-    detached() {
+    disconnectedCallback() {
+        super.disconnectedCallback();
         window.removeEventListener("item-collection-refresh",
                 this._listener);
         this.removeEventListener("item-deleted", this._listener2);
