--- a/src/recipe-details.html
+++ b/src/recipe-details.html
@@ -252,11 +252,13 @@ class RecipeDetails extends Polymer.GestureEventListeners(Recipes.Element) {
         };
     }
     // Make app-grid update properly.
-    attached() {
+    connectedCallback() {
+        super.connectedCallback();
         this._listener = this.updateStyles.bind(this);
         window.addEventListener("resize", this._listener);
     }
-    detached() {
+    disconnectedCallback() {
+        super.disconnectedCallback();
         window.removeEventListener("resize", this._listener);
     }
     // Loading is true if any flags in it are true.
