--- a/src/recipe-display.html
+++ b/src/recipe-display.html
@@ -141,11 +141,13 @@ class RecipeDisplay extends Polymer.GestureEventListeners(Recipes.Element) {
         };
     }
     // Make app-grid update properly.
-    attached() {
+    connectedCallback() {
+        super.connectedCallback();
         this._listener = this.updateStyles.bind(this);
         window.addEventListener("resize", this._listener);
     }
-    detached() {
+    disconnectedCallback() {
+        super.disconnectedCallback();
         window.removeEventListener("resize", this._listener);
     }
     expand_recipe(event) {
