--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -91,7 +91,7 @@
             <!-- Search box. -->
             <paper-input class="flex" label="Filter"
                 type="text" value="{{search_text}}">
-                <paper-icon-button suffix icon="icons:clear"
+                <paper-icon-button slot="suffix" icon="icons:clear"
                         on-tap="clear_filter">
                 </paper-icon-button>
             </paper-input>
