--- a/src/recipe-form.html
+++ b/src/recipe-form.html
@@ -35,7 +35,7 @@
                     value="{{recipe.title}}"
                     autocapitalize="words"
                     char-counter maxlength="30">
-                <paper-icon-button suffix
+                <paper-icon-button slot="suffix"
                         icon="icons:clear"
                         on-tap="clear_field">
                 </paper-icon-button>
@@ -47,7 +47,7 @@
                     value="{{recipe.summary}}"
                     autocapitalize="sentences"
                     char-counter maxlength="50">
-                <paper-icon-button suffix
+                <paper-icon-button slot="suffix"
                         icon="icons:clear"
                         on-tap="clear_field">
                 </paper-icon-button>
@@ -88,7 +88,7 @@
                     value="{{typed_tag}}"
                     list="tags"
                     char-counter maxlength="30">
-                <paper-icon-button suffix
+                <paper-icon-button slot="suffix"
                         icon="icons:check-circle"
                         on-tap="add_typed_tag">
                 </paper-icon-button>
