--- a/src/user-form.html
+++ b/src/user-form.html
@@ -46,7 +46,7 @@
                     label="Email"
                     value="{{user.email}}"
                     char-counter maxlength="40">
-                <paper-icon-button suffix
+                <paper-icon-button slot="suffix"
                         icon="icons:clear"
                         on-tap="clear_field">
                 </paper-icon-button>
