--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -92,6 +92,7 @@
             <paper-input class="flex" label="Filter"
                 type="text" value="{{search_text}}">
                 <paper-icon-button slot="suffix" icon="icons:clear"
+                        tabindex="-1"
                         on-tap="clear_filter">
                 </paper-icon-button>
             </paper-input>
