--- a/src/user-form.html
+++ b/src/user-form.html
@@ -47,6 +47,7 @@
                     value="{{user.email}}"
                     char-counter maxlength="40">
                 <paper-icon-button slot="suffix"
+                        tabindex="-1"
                         icon="icons:clear"
                         on-tap="clear_field">
                 </paper-icon-button>
