--- a/src/recipe-form.html
+++ b/src/recipe-form.html
@@ -36,6 +36,7 @@
                     autocapitalize="words"
                     char-counter maxlength="30">
                 <paper-icon-button slot="suffix"
+                        tabindex="-1"
                         icon="icons:clear"
                         on-tap="clear_field">
                 </paper-icon-button>
@@ -48,6 +49,7 @@
                     autocapitalize="sentences"
                     char-counter maxlength="50">
                 <paper-icon-button slot="suffix"
+                        tabindex="-1"
                         icon="icons:clear"
                         on-tap="clear_field">
                 </paper-icon-button>
@@ -89,6 +91,7 @@
                     list="tags"
                     char-counter maxlength="30">
                 <paper-icon-button slot="suffix"
+                        tabindex="-1"
                         icon="icons:check-circle"
                         on-tap="add_typed_tag">
                 </paper-icon-button>
