Switch to the polyfill loader
Now that there's wide support, loading everything is a waste.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" href="s/src/images/touch/apple-touch-icon.png">
 
     <!-- Polyfills. -->
-    <script async src="/s/node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+    <script src="/s/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script async src="/s/node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
 
     <!-- Google Font: Montserrat -->
