Switch from polymer-cli to rollup

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <title>Recipes</title>
+    <base href="/">
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -23,11 +24,7 @@
     <meta name="apple-mobile-web-app-title" content="Recipes">
     <link rel="apple-touch-icon" href="s/src/images/touch/apple-touch-icon.png">
 
-    <!-- Polyfills. -->
-    <script src="/s/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script async src="/s/node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
-
-    <script type="module" async src="/s/src/recipes-app.js"></script>
+    <script type="module" async src="/src/recipes-app.js"></script>
 <style>
     body {
         margin: 0;
