Show basic list of recipes

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     body {
         margin: 0;
         background-color: #e9e9ef;
+        font: "Open Sans", sans-serif;
     }
 </style>
 </head>
